fixing layout bugs

--- a/style.scss
+++ b/style.scss
@@ -168,15 +168,20 @@ body::-webkit-scrollbar-track {
   }
 
   nav {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+    // display: flex;
+    // justify-content: center;
+    // width: 100%;
     margin-bottom: 2rem;
 }
 
 .logo {
     padding-top: 2%;
     margin-left: 10%;
+    transition: transform ease, box-shadow 1s ease;
+}
+
+.logo:hover {
+  scale: (1.03);
 }
 
 .logo img {
@@ -222,6 +227,12 @@ a {
     color: $link-color;
     font-family: "Cormorant", serif;
     font-size: clamp(1rem, 1.8vw, 2rem);
+    transition: transform 0.6s ease, box-shadow 0.3s ease;
+}
+
+a:hover {
+  color: white;
+  scale: (1.05);
 }
 
 .burger-menu {
@@ -281,7 +292,7 @@ button, a, input[type="submit"] {
 }
 
 .hero {
-    margin-top: 15vh;
+    margin-top: 5rem;
     width: 100%;
 }
 
@@ -332,7 +343,7 @@ hr {
   }
   
   .about-content img {
-    width: 100%;
+    // width: 100%;
     height: auto;
     border-radius: 10px;
     filter: sepia(0.5);
@@ -677,6 +688,9 @@ textarea {
     .about-content {
         grid-template-columns: 1fr 2fr;
     }
+    .gallery-grid {
+      grid-template-columns: repeat(3, 1fr) !important;
+  }
 
 }
 
@@ -699,9 +713,9 @@ textarea {
       width: calc(100% - 6px);
       height: 25px;
     }
-/**/
+
     .burger-menu {
-      display: inline-block;
+      display: block;
       position: absolute;
       top: 2%;
       left: 10px;
@@ -744,14 +758,19 @@ textarea {
       padding: 0 1rem;
   }
 
+  .about-content img {
+    margin: 0 auto;
+}
+
+  #gallery {
+    margin-bottom: 5rem;
+  }
+
   .gallery-grid {
       grid-template-columns: repeat(2, 1fr); /* 2 sloupce na menších obrazovkách */
   }
 
   /* Zmenšení mezer */
-  .hero {
-      margin-top: 5vh;
-  }
 
   hr {
       margin-top: 5vh;
